# wasm2llvm

./: Cargo.toml  README.md  sieve.sh  sieve.wat  test.rs
src/: lib.rs
