[package]
name = "wasm2llvm"
version = "0.1.0"
authors = ["Yakov Zaytsev <me@ysz.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wabt = "0.9.0"
tempfile = "3.1.0"
# TODO remove
wasmi = { path = "../wasmi" }
parity-wasm = "0.40"
# test
which = "3.0.0"
